--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
         </header>
     </div>
 
-    <!-- MAIN CONTENT -->   <!--
+    <!-- MAIN CONTENT -->   
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <p>Instructor: Ankita Sikdar</p>
 
 <p>Email Id: <a href="mailto:sikdar.6@osu.edu">sikdar.6@osu.edu</a></p>
 
-<p>Class hours : Wed Fri 3.55pm-5.15pm</p>
+<p>Class hours : Tue Wed Thurs Fri 9.35am-10.55am</p>
 
-<p>Class location : Caldwell Lab 220</p>
+<p>Class location : Caldwell Lab 177</p>
 
-<p>Office hours : Monday 3.30-5pm </p>
+<p>Office hours : Wed 11-1pm </p>
 
 <p>Office location : Caldwell Lab 418</p>
 
@@ -62,10 +62,10 @@
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/conditionals.html">Conditionals</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/lecture/loops.html">Loops</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/loops.html">Loops</a></p> 
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/functions.html">Functions</a> <a href="http://ankitasikdar.github.io/cse2122/lecture/rectangle.html">Codes</a></p>
-
+<!--
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/arrays.html">Arrays</a></p>
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/vectors.html">Vectors</a></p>
@@ -101,39 +101,38 @@
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/game-design.html">Game Desgin</a></p>
 
 <p><strong>Exception Handling (refer to class notes)</strong></p> 
-
+-->
 <p><strong>Homeworks</strong></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-1.html">Homework1, due 1/22/2014 11.59pm</a> </p> 
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-1.html">Homework1, due 6/20/2014 11.59pm</a> </p> 
 
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-2.html">Homework2, due 6/24/2014 11.59pm</a> </p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-2.html">Homework2, due 1/29/2014 11.59pm</a> </p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-3.html">Homework3, due 6/30/2014 11.59pm <!--(Bonus points if you handle the edges instead of ignoring them)--> </a></p>
+<!--
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-stack.html">Homework4, due 7/5/2014 11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-3.html">Homework3, due 2/7/2014 11.59pm (Bonus points if you handle the edges instead of ignoring them) </a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-4.html">Homework5, due 7/10/2014 11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-stack.html">Homework4, due 2/15/2014 11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-5.html">Homework6, due 7/16/2014 11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-4.html">Homework5, due 3/7/2014 11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-6.html">Homework7, due 7/22/2014 11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-5.html">Homework6, due 3/21/2014 11.59pm</a></p>
-
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-6.html">Homework7, due 4/3/2014 11.59pm</a></p>
-
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-7.html">Homework8, due 4/21/2014 11.59pm</a></p> 
-
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-7.html">Homework8, due 7/30/2014 11.59pm</a></p> 
+-->
 <p><strong>Midterms</strong></p>
 
-<p>First midterm on 2/21/2013</p>
+<p>First midterm on 7/3/2014 from 9.35am-10.55am(class room)</p>
 
 <ul>
 <li>Closed book,closed notes</li>
-<!--<li>Syllabus-materials covered in class till 6/21/2013</li>  
+<li>Syllabus-materials covered in class till 7/2/2014</li>  
 
-</ul><p>Second midterm on 3/28/2014</p>
+</ul><p>Second midterm on 7/18/2014 from 9.35am-10.55am(class room)</p>
 
 <ul>
 <li>Closed book,closed notes</li>
-<li>Syllabus-to be announced later</li>
+<li>Syllabus-materials covered in class till 7/17/2014</li>
 <!--
 </ul><p><strong>IMPORTANT</strong></p>
 
@@ -144,12 +143,12 @@
 <li>Syllabus-materials covered in class till 7/24/2013</li>
 <li>I am going to use best of two out of the three midterms. This is a chance to improve your scores! </li>
 </ul><p><strong>Finals</strong></p>
-
-<p>Final exam on 4/24/2014 from 4:00pm - 5:45pm (class room)</p>
+-->
+<p>Final exam on 8/1/2014 from 9.35am-10.55am(class room)</p>
 
 <ul>
 <li>Closed book,closed notes</li>
-<!--<li>Syllabus-materials covered in class till 7/26/2013</li> 
+<li>Entire syllabus</li> 
 </u>
       </section>
     </div>
