--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
 <p>Email Id: <a href="mailto:sikdar.6@osu.edu">sikdar.6@osu.edu</a></p>
 
-<p>Class hours : Tue Wed Thurs Fri 9.35am-10.55am</p>
+<p>Class hours : Wed Fri 3.55pm-5.15pm</p>
 
-<p>Class location : Caldwell Lab 177</p>
+<p>Class location : Caldwell Lab 171</p>
 
-<p>Office hours : Wed 11-1pm </p>
+<p>Office hours : Fri 12-2pm </p>
 
 <p>Office location : Caldwell Lab 418</p>
 
@@ -70,6 +70,8 @@
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/vectors.html">Vectors</a></p>
 
+<p><a href="http://ankitasikdar.github.io/cse2122/lecture/debugging.html">Debugging Techniques</a> <a href="http://ankitasikdar.github.io/cse2122/lecture/debugging.html">Codes</a></p>
+
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/linked-lists.html">Linked lists</a></p>
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/trees.html">Trees</a></p>
@@ -99,40 +101,40 @@
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/stl-sort-search.html">Sorting and Searching</a></p>
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/game-design.html">Game Desgin</a></p>
-<!--
+<--
 <p><strong>Exception Handling (refer to class notes)</strong></p> 
 -->
 <p><strong>Homeworks</strong></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-1.html">Homework1, due 6/20/2014 11.59pm</a> </p> 
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-1.html">Homework1, due 1/20/2016 11.59pm</a> </p> 
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-2.html">Homework2, due 6/24/2014 11.59pm</a> </p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-2.html">Homework2, due 1/29/2015 11.59pm</a> </p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-3.html">Homework3, due 6/30/2014 11.59pm <!--(Bonus points if you handle the edges instead of ignoring them)--> </a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-3.html">Homework3, due 2/5/2015 11.59pm <!--(Bonus points if you handle the edges instead of ignoring them)--> </a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-stack.html">Homework4, due 7/5/2014 11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-stack.html">Homework4, due 2/15/2015 11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-4.html">Homework5, due 7/12/2014 11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-4.html">Homework5, due 2/25/2016 11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-5.html">Homework6, due 7/16/2014 11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-5.html">Homework6, due  3/10/2016 11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-6.html">Homework7, due 7/22/2014 11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-6.html">Homework7, due 3/22/2016  11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-7.html">Homework8, due 7/30/2014 11.59pm</a></p> 
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-7.html">Homework8, due 4/20/2016 11.59pm</a></p> 
 
 <p><strong>Midterms</strong></p>
 
-<p>First midterm on 7/3/2014 from 9.35am-10.55am(class room)</p>
+<p>First midterm on 2/19/2016 from 3.55pm-5.15pm(class room)</p>
 
 <ul>
 <li>Closed book,closed notes</li>
-<li>Syllabus-materials covered in class till 7/2/2014</li>  
+<li>Syllabus-materials covered in class till 2/17/2015</li>  
 
-</ul><p>Second midterm on 7/18/2014 from 9.35am-10.55am(class room)</p>
+</ul><p>Second midterm on 3/25/2016 from 3.55pm-5.15pm(class room)</p>
 
 <ul>
 <li>Closed book,closed notes</li>
-<li>Syllabus-materials covered in class till 7/17/2014</li>
+<li>Syllabus-materials covered in class till 3/23/2016</li>
 <!--
 </ul><p><strong>IMPORTANT</strong></p>
 
@@ -144,7 +146,7 @@
 <li>I am going to use best of two out of the three midterms. This is a chance to improve your scores! </li>
 </ul><p><strong>Finals</strong></p>
 -->
-<p>Final exam on 8/1/2014 from 9.35am-10.55am(class room)</p>
+<p>Final exam on 4/22/2016 from 3.55pm-5.15pm(class room)</p>
 
 <ul>
 <li>Closed book,closed notes</li>
