--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <p>Office hours : Fri 12-2pm </p>
 
-<p>Office location : Caldwell Lab 418</p>
+<p>Office location : Dreese Labs 457 </p>
 
 <p><strong>Course Contents</strong></p>
  
@@ -69,9 +69,9 @@
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/arrays.html">Arrays</a></p>
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/vectors.html">Vectors</a></p>
-
+<!--
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/debugging.html">Debugging Techniques</a> <a href="http://ankitasikdar.github.io/cse2122/lecture/debugging.html">Codes</a></p>
-
+-->
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/linked-lists.html">Linked lists</a></p>
 
 <p><a href="http://ankitasikdar.github.io/cse2122/lecture/trees.html">Trees</a></p>
