--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
 <p>Email Id: <a href="mailto:sikdar.6@osu.edu">sikdar.6@osu.edu</a></p>
 
-<p>Class hours : Wed Fri 3.55pm-5.15pm</p>
+<p>Class hours : Tue Wed Fri 10.20am-12.25pm</p>
 
-<p>Class location : Caldwell Lab 171</p>
+<p>Class location : Dreese Lab 264</p>
 
-<p>Office hours : Fri 12-2pm </p>
+<p>Office hours : Wed 2-4pm </p>
 
 <p>Office location : Dreese Labs 457 </p>
 
@@ -106,35 +106,35 @@
 -->
 <p><strong>Homeworks</strong></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-1.html">Homework1, due 1/20/2016 11.59pm</a> </p> 
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-1.html">Homework1, due 6/13/2016 11.59pm</a> </p> 
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-2.html">Homework2, due 1/29/2015 11.59pm</a> </p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-2.html">Homework2, due 6/13/2015 11.59pm</a> </p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-3.html">Homework3, due 2/5/2015 11.59pm <!--(Bonus points if you handle the edges instead of ignoring them)--> </a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-3.html">Homework3, due 6/17/2015 11.59pm <!--(Bonus points if you handle the edges instead of ignoring them)--> </a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-stack.html">Homework4, due 2/15/2015 11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-stack.html">Homework4, due 6/25/2015 11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-4.html">Homework5, due 2/25/2016 11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-4.html">Homework5, due 6/30/2016 11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-5.html">Homework6, due  3/10/2016 11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-5.html">Homework6, due  7/6/2016 11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-6.html">Homework7, due 3/22/2016  11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-6.html">Homework7, due 7/13/2016  11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-7.html">Homework8, due 4/20/2016 11.59pm</a></p> 
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-7.html">Homework8, due 7/27/2016 11.59pm</a></p> 
 
 <p><strong>Midterms</strong></p>
 
-<p>First midterm on 2/19/2016 from 3.55pm-5.15pm(class room)</p>
+<p>First midterm on 6/24/2016 from 10.20am-12.25pm(class room)</p>
 
 <ul>
 <li>Closed book,closed notes</li>
-<li>Syllabus-materials covered in class till 2/17/2015</li>  
+<li>Syllabus-materials covered in class till 6/22/2016</li>  
 
-</ul><p>Second midterm on 3/23/2016 from 3.55pm-5.15pm(class room)</p>
+</ul><p>Second midterm on 7/15/2016 from 10.20am-12.25pm(class room)</p>
 
 <ul>
 <li>Closed book,closed notes</li>
-<li>Syllabus-materials covered in class till 3/23/2016</li>
+<li>Syllabus-materials covered in class till 7/13/2016</li>
 <!--
 </ul><p><strong>IMPORTANT</strong></p>
 
@@ -146,7 +146,7 @@
 <li>I am going to use best of two out of the three midterms. This is a chance to improve your scores! </li>
 </ul><p><strong>Finals</strong></p>
 -->
-<p>Final exam on 4/22/2016 from 3.55pm-5.15pm(class room)</p>
+<p>Final exam on 7/29/2016 from 10.20am-12.25pm(class room)</p>
 
 <ul>
 <li>Closed book,closed notes</li>
