--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
 <p>Email Id: <a href="mailto:sikdar.6@osu.edu">sikdar.6@osu.edu</a></p>
 
-<p>Class hours : Tue Wed Fri 10.20am-12.25pm</p>
+<p>Class hours : Wed Fri 3.55pm-5.15pm</p>
 
-<p>Class location : Dreese Lab 264</p>
+<p>Class location : Bolz Hall 317</p>
 
-<p>Office hours : Wed 2-4pm </p>
+<p>Office hours : Fri 1.30-3.30pm </p>
 
 <p>Office location : Dreese Labs 457 </p>
 
@@ -106,35 +106,35 @@
 -->
 <p><strong>Homeworks</strong></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-1.html">Homework1, due 6/13/2016 11.59pm</a> </p> 
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-1.html">Homework1, due 9/2/2016 11.59pm</a> </p> 
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-2.html">Homework2, due 6/13/2015 11.59pm</a> </p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-2.html">Homework2, due 9/9/2015 11.59pm</a> </p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-3.html">Homework3, due 6/17/2015 11.59pm <!--(Bonus points if you handle the edges instead of ignoring them)--> </a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-3.html">Homework3, due 9/16/2015 11.59pm <!--(Bonus points if you handle the edges instead of ignoring them)--> </a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-stack.html">Homework4, due 6/25/2015 11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-stack.html">Homework4, due 9/28/2015 11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-4.html">Homework5, due 6/30/2016 11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-4.html">Homework5, due 10/12/2016 11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-5.html">Homework6, due  7/6/2016 11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-5.html">Homework6, due  10/21/2016 11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-6.html">Homework7, due 7/13/2016  11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-6.html">Homework7, due 11/4/2016  11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-7.html">Homework8, due 7/27/2016 11.59pm</a></p> 
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-7.html">Homework8, due 12/2/2016 11.59pm</a></p> 
 
 <p><strong>Midterms</strong></p>
 
-<p>First midterm on 6/24/2016 from 10.20am-12.25pm(class room)</p>
+<p>First midterm on 9/23/2016 from 3.55pm-5.15pm(class room)</p>
 
 <ul>
 <li>Closed book,closed notes</li>
-<li>Syllabus-materials covered in class till 6/22/2016</li>  
+<li>Syllabus-materials covered in class till 9/21/2016</li>  
 
-</ul><p>Second midterm on 7/15/2016 from 10.20am-12.25pm(class room)</p>
+</ul><p>Second midterm on 10/28/2016 from 3.55pm-5.15pm(class room)</p>
 
 <ul>
 <li>Closed book,closed notes</li>
-<li>Syllabus-materials covered in class till 7/13/2016</li>
+<li>Syllabus-materials covered in class till 10/26/2016</li>
 <!--
 </ul><p><strong>IMPORTANT</strong></p>
 
@@ -146,7 +146,7 @@
 <li>I am going to use best of two out of the three midterms. This is a chance to improve your scores! </li>
 </ul><p><strong>Finals</strong></p>
 -->
-<p>Final exam on 7/29/2016 from 10.20am-12.25pm(class room)</p>
+<p>Final exam on 12/7/2016 from 3.55pm-5.15pm(class room)</p>
 
 <ul>
 <li>Closed book,closed notes</li>
