--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <p>Class hours : Wed Fri 3.55pm-5.15pm</p>
 
-<p>Class location : Bolz Hall 314</p>
+<p>Class location : Dreese Labs 264</p>
 
 <p>Office hours : Fri 1.30-3.30pm </p>
 
@@ -106,37 +106,37 @@
 -->
 <p><strong>Homeworks</strong></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-1.html">Homework1, due 1/18/2017 11.59pm</a> </p> 
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-1.html">Homework1, due 8/30/2017 11.59pm</a> </p> 
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-2.html">Homework2, due 1/27/2017 11.59pm</a> </p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-2.html">Homework2, due 9/8/2017 11.59pm</a> </p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-3.html">Homework3, due 2/8/2017 11.59pm <!--(Bonus points if you handle the edges instead of ignoring them)--> </a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-3.html">Homework3, due 9/20/2017 11.59pm <!--(Bonus points if you handle the edges instead of ignoring them)--> </a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-stack.html">Homework4, due 2/17/2017 11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-stack.html">Homework4, due 9/29/2017 11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-4.html">Homework5, due 2/26/2017 11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-4.html">Homework5, due 10/8/2017 11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-5.html">Homework6, due  3/10/2017 11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-5.html">Homework6, due  10/20/2017 11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-6.html">Homework7, due 3/24/2017  11.59pm</a></p>
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-6.html">Homework7, due 11/3/2017  11.59pm</a></p>
 
-<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-7.html">Homework8, due 4/12/2017 11.59pm</a></p> 
+<p><a href="http://ankitasikdar.github.io/cse2122/homework/homework-7.html">Homework8, due 11/22/2017 11.59pm</a></p> 
 
 <p><strong>Midterms</strong></p>
 
-<p>First midterm on 2/17/2017 from 3.55pm-5.15pm(class room)</p>
+<p>First midterm on 9/29/2017 from 3.55pm-5.15pm(class room)</p>
 
 <ul>
 <li>Closed book,closed notes</li>
-<li>Syllabus-materials covered in class till 2/15/2017</li>  
+<li>Syllabus-materials covered in class till 9/27/2017</li>  
 
-</ul><p>Second midterm on 3/24/2017 from 3.55pm-5.15pm(class room)</p>
+</ul><p>Second midterm on 10/27/2017 from 3.55pm-5.15pm(class room)</p>
 
 <ul>
 <li>Closed book,closed notes</li>
-<li>Syllabus-materials covered in class till 3/22/2017</li>
+<li>Syllabus-materials covered in class till 10/25/2017</li>
 
-<p>Final exam on 4/21/2017 from 3.55pm-5.15pm(class room)</p>
+<p>Final exam on 12/6/2017 from 3.55pm-5.15pm(class room)</p>
 
 <ul>
 <li>Closed book,closed notes</li>
